kubernetes/monitoring/system-audit/middleware.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sablier-system-audit
  namespace: monitoring
spec:
  plugin:
    sablier:
      group: system-audit
      dynamic:
        displayName: System Audit
        refreshFrequency: 5s
        showDetails: "true"
        theme: shuffle
      sablierUrl: http://sablier:10000
      sessionDuration: 30m

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-system-audit
  namespace: monitoring
spec:
  forwardAuth:
    address: http://authentik.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User
      - X-authentik-username
      - X-authentik-email
      - X-authentik-groups
      - X-authentik-uid
      - X-authentik-name
      - Authorization
    authRequestHeaders:
      - X-Forwarded-Method
      - X-Forwarded-Proto
      - X-Forwarded-Host
      - X-Forwarded-Uri
      - Cookie
