kubernetes/monitoring/system-audit/system-audit.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system-audit
  namespace: monitoring
  labels:
    app: system-audit
    sablier.enable: "true"
    sablier.group: system-audit
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: system-audit
  template:
    metadata:
      labels:
        task: monitoring
        app: system-audit
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - jay-c
      hostPID: true
      containers:
      - name: system-audit
        image: python:3.11-slim
        command: ['/venv/bin/streamlit', 'run', '/config/app.py', '--server.port=8501', '--server.address=0.0.0.0']
        ports:
        - containerPort: 8501
        securityContext:
          privileged: true
        volumeMounts:
        - name: venv
          mountPath: /venv
        - name: config
          mountPath: /config
        - name: reports
          mountPath: /reports
      volumes:
      - name: venv
        emptyDir: {}
      - name: config
        configMap:
          name: system-audit-config
      - name: reports
        persistentVolumeClaim:
          claimName: system-audit-reports-claim

---
apiVersion: v1
kind: Service
metadata:
  name: system-audit
  namespace: monitoring
spec:
  ports:
  - name: web
    port: 80
    targetPort: 8501
  selector:
    app: system-audit

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-audit-https
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "monitoring-sablier-system-audit@kubernetescrd"
spec:
  tls:
  - secretName: system-audit-bas-tls
  rules:
  - host: audit.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: system-audit
            port:
              number: 80
